[gd_scene load_steps=6 format=3 uid="uid://6rrjq74htlgk"]

[ext_resource type="Script" uid="uid://dds0f3d6adnox" path="res://ui/exit_menu/exit_menu.gd" id="1_acab7"]
[ext_resource type="Theme" uid="uid://yiax7h37oyks" path="res://assets/themes/main.tres" id="2_7u248"]
[ext_resource type="Texture2D" uid="uid://uyh3ql0c2ldq" path="res://assets/images/xbutton.png" id="3_7u248"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s048n"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4aaux"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="ExitMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_acab7")

[node name="Panel" type="Panel" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -228.0
offset_right = 282.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_7u248")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -26.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7u248")
text = "Main Menu"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7u248")
text = "Settings"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7u248")
text = "Quit"

[node name="ClossButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 488.0
offset_top = 16.0
offset_right = 721.0
offset_bottom = 249.0
scale = Vector2(0.2, 0.2)
theme_override_styles/hover = SubResource("StyleBoxFlat_s048n")
theme_override_styles/normal = SubResource("StyleBoxFlat_4aaux")
icon = ExtResource("3_7u248")

[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Panel/ClossButton" to="." method="_on_closs_button_pressed"]
